update for Nam Tash